--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
                     Full-stack shopping solution with real-time inventory management.
                 </p>
                 <div class="project-tech-stack">
-                    <span class="tech-badge">React</span>
-                    <span class="tech-badge">Node.js</span>
-                    <span class="tech-badge">MongoDB</span>
+                    <span class="tech-badge">Html</span>
+                    <span class="tech-badge">Css</span>
+                    <span class="tech-badge">JavaScript</span>
                 </div>
             </article>
         </div>
